# Project-CPT

./: .gitignore  .gitlab-ci.yml  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.md  change_include_guard.py  doc.cfg  static_compile.sh
CPT.wiki/: Affymetrix-CDF-Data-File-Format.md  Affymetrix-CEL-Data-File-Format.md  AxiomGT.md  BRLMMp.md  Birdseed.md  CAD-file.md  CAD-format-spec.md  CEN-file.md  CPTCMakeUsage.md  CPTLibraryStructure.md  CPTProjectPythonModule.md  Compile-from-source.md  DocumentForHDF5Builder.md  Download-package.md  File-Format.md  Genotyping-Pipeline.md  Genotyping.md  HDFView.md  Install.md  Installation.md  Introduction.md  LinkCPTLibraryByUsingCMakeTool.md  LinkCPTLibraryByUsingQmakeTool.md  PythonAPIRerferenceContent.md  Run-binaries.md  cad2cdf.md  cen-example.md  cptreleaseworkflow.md  home.md  il2cel.md  intensitiesdump-usage.md  platformrequirement.md  troubleshooting.md  under-construction.md  zion-image-stitcher.md
ci/: download.php  upload.sh
cmake/: Config.cmake.in  bundle.cmake.in  c_cpp_properties.json.in  compiler.cmake  cpack.cmake  dependencies.cmake  ide.cmake  install.cmake  options.cmake  packages.cmake
doc/: hd5_schema_quickstart.txt  hdf5_schema_details.json  hdf5_schema_example.json  hdf5_schema_template.json
resource/: intensities_dump.ui
script/: RtoC.sh  plot_NPcall.py  plot_evaluatedbox.py  plot_genotyping.py  plot_heatmap_tm.py  plot_heatmap_tm_pids.py  plot_marker_call.py  plot_marker_slope.py  plot_overlap_historgram.py  plot_probeAcc_histo.py  plot_probeset.py  plot_venn.py  svm_probeset.py
(+1349 files in other folders)
